fix x overflow on orders page

--- a/client/src/components/Order/Order.module.css
+++ b/client/src/components/Order/Order.module.css
@@ -31,3 +31,8 @@
   align-items: center;
 }
 
+@media (max-width: 495px) {
+  .Order {
+    width: 90vw;
+  }
+}
