--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,6 +31,7 @@ html {
   ); */
 
   background: linear-gradient(81deg, rgba(0,0,0,1) 37%, rgba(255,112,0,1) 37.1%);
+  overflow : auto
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
